# wizard404

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  run-dev.sh  w404  w404.bat  wizard404
backend/: .coverage  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  path_utils.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/services/: __init__.py  documents.py
backend/core/: __init__.py  discovery.py  models.py  search.py
backend/core/extractors/: __init__.py  base.py  image.py  office.py  pdf_extractor.py  text.py
backend/scripts/: clear_documents.py  seed_admin.py
backend/tests/: __init__.py  conftest.py  test_api_documents.py  test_discovery.py  test_embeddings.py  test_extractors.py  test_models.py  test_organize.py  test_search.py  test_semantic.py  test_services_documents.py  test_summary.py  test_summary_scan.py  test_text_cleanup.py
backend/wizard404_core/: __init__.py  discovery.py  embeddings.py  models.py  search.py  semantic.py  summary.py  summary_scan.py  text_cleanup.py
backend/wizard404_core/extractors/: __init__.py  base.py  code_binary.py  image.py  media.py  office.py  pdf_extractor.py  text.py
cli/: ascii.txt  pyproject.toml  wizard.txt
cli/tests/: __init__.py  conftest.py  test_api_client.py  test_backend_launcher.py  test_loading.py  test_navigation.py  test_scan.py  test_tui_hidden.py
cli/tests/e2e/: __init__.py  test_cli_commands.py
cli/wizard404_cli/: __init__.py  api_client.py  backend_launcher.py  main.py
cli/wizard404_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/wizard404_cli/commands/: __init__.py  browse.py  (+6 more)
(+105 files in other folders)
